# coworld-crewrift

./: .dockerignore  .gitignore  Dockerfile  GRAPHICS_REPORT.md  README.md  config.json  coworld_manifest.json  crewrift.nimble  darkbg.aseprite  map.json  nim.cfg  nimble.paths  play.md  play_crewrift_prime.md  skeld.aseprite  skeld2.aseprite  spritesheet.aseprite  tiny5.aseprite  upload.sh  vanta9.aseprite
clients/: admin_client.html  global_client.html  player_client.html  stats.html  (+1 more)
commissioner/: CATALOG.yaml  README.md  pyproject.toml
commissioner/commissioners/: Dockerfile  Dockerfile.dockerignore  __init__.py  build_image.sh
commissioner/commissioners/common/: __init__.py  adapters.py  app.py  commissioners.py  models.py  protocol.py  server.py  utils.py
commissioner/commissioners/common/ruleset_strategy/: __init__.py  commissioner.py  config.py  entrants.py  membership_events.py  round_start.py  scheduling.py
commissioner/commissioners/default/: __init__.py  manual_commissioner.py
commissioner/commissioners/ruleset_strategy_commissioner/: README.md  __init__.py  build.sh  ruleset_strategy_commissioner.py
commissioner/commissioners/ruleset_strategy_commissioner/configs/: agricogla.yaml  among_them.yaml  cogs_vs_clips.yaml  cue_n_woo.yaml  default.yaml  four_score.yaml  proxywar.yaml
commissioner/docs/: COMMISSIONER_DESIGN.md  COWORLD_REFERENCE.md
players/crewborg/tools/event-warehouse/crewrift-event-reporter/: .dockerignore  .gitignore  Dockerfile  README.md  crewrift-event-reporter-design.md  pyproject.toml
players/crewborg/tools/event-warehouse/crewrift-event-reporter/crewrift_event_reporter/: __init__.py  analysis.py  app.py  bundles.py  events.py  protocol.py  replay.py  service.py  uri_io.py
players/crewborg/tools/event-warehouse/crewrift-event-reporter/tests/: test_event_reporter.py
players/crewborg/tools/event-warehouse/crewrift-event-warehouse/: Dockerfile  README.md  crewrift-event-warehouse-design.md  pyproject.toml
players/crewborg/tools/event-warehouse/crewrift-event-warehouse/crewrift_event_warehouse/: __init__.py  cli.py  dashboard.py  identity.py  inputs.py  results.py  schema.py  suss.py  warehouse.py  worker.py
players/crewborg/tools/event-warehouse/crewrift-event-warehouse/crewrift_event_warehouse/assets/: index.html
players/crewborg/tools/event-warehouse/crewrift-event-warehouse/tests/: conftest.py  test_warehouse.py
(+506 files in other folders)
