[project]
name = "commissioners"
version = "0.1.0"
description = "Runnable Coworld commissioner containers."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115,<0.116",
    "pydantic>=2.10.0",
    "PyYAML>=6.0.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["commissioners*"]
